--- a/src/jetPR_description/package.xml
+++ b/src/jetPR_description/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>pepper</name>
+  <name>jetPR_description</name>
   <version>0.0.0</version>
-  <description>The pepper package</description>
+  <description>description of jetPR robot</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
