--- a/src/jetPR_drivers/config/base_local_planner_params.yaml
+++ b/src/jetPR_drivers/config/base_local_planner_params.yaml
@@ -1,21 +1,47 @@
-TrajectoryPlannerROS:
-  acc_lim_x: 0.1
-  acc_lim_y: 0.1
-  acc_lim_theta: 0.3
-  max_vel_x: 0.5
-  min_vel_x: 0.05
-  sim_time: 1.5
-  min_in_place_rotational_vel: 0.3
-  meter_scoring: true
-  vx_samples: 3
-  vtheta_samples: 20
-  xy_goal_tolerance: 0.1
-  yaw_goal_tolerance: 0.1
-  latch_xy_goal_tolerance: true
-  pdist_scale: 0.8 # The higher will follow more the global path.
-  gdist_scale: 0.8
-  occdist_scale: 0.001
-  path_distance_bias: 40.0
-  goal_distance_bias: 32.0
-  publish_cost_grid_pc: false
-  recovery_behaviors: [{name: conservative_reset, type: clear_costmap_recovery/ClearCostmapRecovery},{name: aggressive_reset, type: clear_costmap_recovery/ClearCostmapRecovery}]
+DWAPlannerROS:
+
+# Robot Configuration Parameters
+  max_vel_x: 0.26
+  min_vel_x: 0.0
+
+  max_vel_y: 0.0
+  min_vel_y: 0.0
+
+# The velocity when robot is moving in a straight line
+  max_trans_vel:  0.26
+  min_trans_vel:  0.13
+
+  max_rot_vel: 1.82
+  min_rot_vel: 0.9
+
+  acc_lim_x: 2.5
+  acc_lim_y: 0.0
+  acc_lim_theta: 3.2 
+
+# Goal Tolerance Parametes
+  xy_goal_tolerance: 0.05
+  yaw_goal_tolerance: 0.17
+  latch_xy_goal_tolerance: false
+
+# Forward Simulation Parameters
+  sim_time: 2.0
+  vx_samples: 20
+  vy_samples: 0
+  vth_samples: 40
+  controller_frequency: 10.0
+
+# Trajectory Scoring Parameters
+  path_distance_bias: 32.0
+  goal_distance_bias: 20.0
+  occdist_scale: 0.02
+  forward_point_distance: 0.325
+  stop_time_buffer: 0.2
+  scaling_speed: 0.25
+  max_scaling_factor: 0.2
+
+# Oscillation Prevention Parameters
+  oscillation_reset_dist: 0.05
+
+# Debugging
+  publish_traj_pc : true
+  publish_cost_grid_pc: true
