--- a/src/jetPR_drivers/config/global_costmap_params.yaml
+++ b/src/jetPR_drivers/config/global_costmap_params.yaml
@@ -1,12 +1,10 @@
 global_costmap:
   global_frame: map
   robot_base_frame: base_link
-  update_frequency: 3.0
+
+  update_frequency: 5.0
+  publish_frequency: 5.0
+  transform_tolerance: 0.5
+
   static_map: true
-  always_send_full_costmap: true
-  observation_sources: laser_scan_sensor
-  point_cloud_sensor: {sensor_frame: base_link, data_type: LaserScan, topic: /scan, marking: true, clearing: true}
-  plugins:
-     - {name: static_layer, type: "costmap_2d::StaticLayer"}
-     - {name: obstacle_layer, type: "costmap_2d::ObstacleLayer"}
-     - {name: inflation_layer, type: "costmap_2d::InflationLayer"}
+ 
